--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,22 +29,19 @@ jobs:
           target: ${{ matrix.target }}
           override: true
       - name: Build
-        run: cargo build --release --target $target --locked
-        target: "${{ matrix.target }}"
+        run: cargo build --release --target ${{ matrix.target }} --locked
       - name: Package
         run: |
-          install -D target/$target/release/cntr $name/cntr
-          install -D target/$target/release/cntr cntr-bin-$version-$target
+          version=$(basename ${{ github.ref }})
+          name="cntr-$version"
+          depsname="cntr-src-$version"
+          install -D target/${{ matrix.target }}/release/cntr $name/cntr
+          install -D target/${{ matrix.target }}/release/cntr cntr-bin-$version-$target
           mkdir $depsname
           git archive HEAD | tar -x -C $depsname
           cargo vendor
           mv vendor $depsname/
           tar czvf $depsname.tar.gz $depsname
-        env:
-          target: "${{ matrix.target }}"
-          version: "${{ github.ref }}"
-          depsname: "cntr-src-${{ github.ref }}"
-          name: "cntr-${{ github.ref }}"
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
